kubernetes/security/vaultwarden/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sablier-vaultwarden
  namespace: security
spec:
  plugin:
    sablier:
      group: vaultwarden
      # blocking:
      #   defaultTimeout: 10s
      dynamic:
        displayName: Vaultwarden
        refreshFrequency: 5s
        showDetails: "true"
        theme: shuffle
      sablierUrl: http://sablier:10000 # Sends: /api/strategies/dynamic?display_name=Vaultwarden&group=vaultwarden&refresh_frequency=5s&session_duration=180m&show_details=true&theme=shuffle
      sessionDuration: 60m
